  - [May 7, 99] Fixed bug: recovering data base from old version of GeneWeb
    did not work when the old directory held spaces.
  - [May 7, 99] Fixed bad behavior under Windows: "GWU.EXE" (in uppercase)
    was not regognized when searching for old GeneWeb versions.
  - [May 7, 99] Fixed bug: "cleanup" under Windows did not work.

* GeneWeb Daemon/CGI (gwd)
  - [May 12, 99] Fixed problem in CGI mode under Windows: sometimes displayed
    warning texts on the browser window.
  - [May 11, 99] Fixed bug: advanced search worked bad when neither "wizard"
    nor "friend": did not work when only specifying e.g. a first name
    or a surname of an existing (non "public") person.
  - [May 11, 99] Fixed bug: when adding ";opt=no_index" in URLs like explained
    in the doc ("How to put links to your base"), the used language was
    missing in the new URL.
  - [May 10, 99] Added ability to put relationship date for non married
    persons.
  - [May 7, 99] Fixed bug visible in Danish: the AE ligature ("&aelig;")
    was incorrectly capitalized.

GeneWeb Version 2.02
--------------------

* New feature

  - [May 4, 99] Added a new program "setup" which will allow to
    use a lot of commands without having to type magic incantations in a
    MSdos (Windows) or Xterm (Unix) window. Everything is done in the Web
    navigator: creation of a database, extraction of a GEDCOM file, cleanup,
    etc etc.
    Should be convenient for non computer scientists beginners (and even for
    old timers computer scientists who already know GeneWeb).

* General
  - [Apr 22, 99] Added Danish language (by Hans Albeck).

* GeneWeb Daemon/CGI (gwd)
  - [May 6, 99] Fixed bad behavior: in "modify person" form, a person was
    not considered as "buried", if the only area filled was "burial place".
  - [May 4, 99] Added button "include missing spouses" for missing ancestors.
  - [May 4, 99] Suppressed trace log count in CGI mode in not redirected